- FIX MDEV-4853 + another bug causing the whole section to be deleted   when deleting one key of a INI table with layout=Row. The same happens   for layout=column but this is normal as one line is one section.

modified:
  storage/connect/tabsys.cpp

- Should fix a valgrind warning in CHRBLK::GetValPtrEx

modified:
  storage/connect/valblk.cpp